--- a/frontend-user-guides-post-detail.html
+++ b/frontend-user-guides-post-detail.html
@@ -18,7 +18,7 @@
             <div class="header-container">
                 <div class="logo-box">
                     <a href="./index.html" class="brand">
-                        <img src="./images/logo.png" alt="" class="brand-img" width="93px">
+                        <img src="./images/logo.png" alt="" class="brand-img" width="92">
                     </a>
                 </div>
                 <nav class="navbar">
@@ -73,7 +73,7 @@
                 <div class="container">
                     <button class="btn-sidebar-toggle">
                         <!-- <p> . . . </p> -->
-                        <img src="./images/icon/Hamburger-icon.png" width="27px" alt="" title="toggle side menu">
+                        <img src="./images/icon/Hamburger-icon.png" width="27" alt="" title="toggle side menu">
                     </button>
                     <div id="aside">
                         <div class="aside-outer-box">
@@ -148,7 +148,7 @@
                     </div>
                     <div id="content">
                         <button class="btn-back" onclick="history.back()">
-                            <img src="./images/icon/arrow-left.png" width="26px" alt="" title="Go Back">
+                            <img src="./images/icon/arrow-left.png" width="26" alt="" title="Go Back">
                         </button>
                         <h3 class="title">Frontend User Guides</h3>
                         <div id="section1">
@@ -159,17 +159,17 @@
                                 <p class="subsection-desc">To complete your registration you will need to confirm your email address, check your email mailbox and click the link inside the email to do this.</p>
                                 <p class="subsection-desc">Please check your junk/spam folder if you did not receive this email.</p>
                                 <p class="subsection-desc">You can also sign up using Google or Facebook sign in.</p>
-                                <img src="./images/post-detail/Signing-up.gif" width="677px" class="section-img" alt="">
+                                <img src="./images/post-detail/Signing-up.gif" width="677" class="section-img" alt="">
                             </div>
                             <div id="sub-section2" class="sub-section">
                                 <p class="subsection-title">Forgotten Password</p>
                                 <p class="subsection-desc">If you have forgotten your password you can reset it through the ‘Forgotten Password’ link. A reset email will be sent to the email address you signed up with. Please check junk/spam folders if you do not receive this email.</p>
-                                <img src="./images/post-detail/Forgotten-Password.gif" width="677px" class="section-img" alt="">
+                                <img src="./images/post-detail/Forgotten-Password.gif" width="677" class="section-img" alt="">
                             </div>
                             <div id="sub-section3" class="sub-section">
                                 <p class="subsection-title">Overview</p>
                                 <p class="subsection-desc">Welcome to the Dubai Fitness Challenge Booking Platform! To find your way around, familiarise yourself with our navigation menu. If you're using mobile you can use the hamburger menu in the top right corner of the screen to get around.</p>
-                                <img src="./images/post-detail/Overview.png" width="677px" class="section-img" alt="">
+                                <img src="./images/post-detail/Overview.png" width="677" class="section-img" alt="">
                             </div>
                         </div>
                         <div id="section2">
@@ -299,7 +299,7 @@
         <footer id="footer" style="box-shadow: 0px -7px 40px rgba(0, 0, 0, 0.1);">
             <div class="container">
                 <div class="info">
-                    <img src="./images/footer-logo.png" alt="" width="162px">
+                    <img src="./images/footer-logo.png" alt="" width="162">
                     <!-- <p class="text-xs text-justify">Launched in 2017, the challenge is simple: complete 30 minutes of activity each day for 30 days. Dubai Fitness Challenge helps create a fitness-focused mindset and inspires us all to seek healthy, active lifestyles. With a month-long calendar of free workouts, exciting fitness events and wellness-centric entertainment, there’s always plenty of inspiration to keep moving.</p> -->
                 </div>
                 <div class="links">
