--- a/post-detail.html
+++ b/post-detail.html
@@ -18,7 +18,7 @@
             <div class="header-container">
                 <div class="logo-box">
                     <a href="./index.html" class="brand">
-                        <img src="./images/logo.png" alt="" class="brand-img" width="93px">
+                        <img src="./images/logo.png" alt="" class="brand-img" width="92">
                     </a>
                 </div>
                 <nav class="navbar">
@@ -73,7 +73,7 @@
                 <div class="container">
                     <button class="btn-sidebar-toggle">
                         <!-- <p> . . . </p> -->
-                        <img src="./images/icon/Hamburger-icon.png" width="27px" alt="" title="toggle side menu">
+                        <img src="./images/icon/Hamburger-icon.png" width="27" alt="" title="toggle side menu">
                     </button>
                     <div id="aside">
                         <div class="aside-outer-box">
@@ -158,7 +158,7 @@
                     </div>
                     <div id="content">
                         <button class="btn-back" onclick="history.back()">
-                            <img src="./images/icon/arrow-left.png" width="26px" alt="" title="Go Back">
+                            <img src="./images/icon/arrow-left.png" width="26" alt="" title="Go Back">
                         </button>
                         <h3 class="title">Getting Started</h3>
                         <div id="section1">
@@ -166,12 +166,12 @@
                             <div id="sub-section1" class="sub-section">
                                 <p class="subsection-title">Logging in</p>
                                 <p class="subsection-desc">You can reach the Backend Login Panel by clicking here - DFC Backend. Please use the login credentials given to you by the DFC Outreach team.</p>
-                                <img src="./images/post-detail/post-detail-01.png" width="677px" class="section-img" alt="">
+                                <img src="./images/post-detail/post-detail-01.png" width="677" class="section-img" alt="">
                             </div>
                             <div id="sub-section2" class="sub-section">
                                 <p class="subsection-title">Forgotten Password</p>
                                 <p class="subsection-desc">If you have forgotten your password you can reset it through the ‘Forgotten Password’ link. A reset email will be sent to the email address your facility signed up with. Please check junk/spam folders if you do not receive this email.</p>
-                                <img src="./images/post-detail/post-detail-02.png" width="677px" class="section-img" alt="">
+                                <img src="./images/post-detail/post-detail-02.png" width="677" class="section-img" alt="">
                             </div>
                             <div id="sub-section3" class="sub-section">
                                 <p class="subsection-title">Dashboard Guide</p>
@@ -188,7 +188,7 @@
                             <p class="subsection-desc">Go to ‘Users’ on the left hand panel and select ‘Users’ again.</p>
                             <p class="subsection-desc">Find your facility profile, it will be labelled with ‘Facility’ under the ‘Groups’ column. You can also use the filter on the top right of the dashboard to filter by > groups >facility.</p>
                             <p class="subsection-desc">Once you have found your facility click on the blue email address text to enter your profile dashboard.</p>
-                            <img src="./images/demo-img.png" class="section-img" width="677px" alt="">
+                            <img src="./images/demo-img.png" class="section-img" width="677" alt="">
                             <div id="sub-section5" class="sub-section">
                                 <p class="subsection-title">User Tab</p>
                                 <p class="subsection-desc">You can reach the Backend Login Panel by clicking here - DFC Backend. Please use the login credentials given to you by the DFC Outreach team.</p>
@@ -257,7 +257,7 @@
         <footer id="footer" style="box-shadow: 0px -7px 40px rgba(0, 0, 0, 0.1);">
             <div class="container">
                 <div class="info">
-                    <img src="./images/footer-logo.png" alt="" width="162px">
+                    <img src="./images/footer-logo.png" alt="" width="162">
                     <!-- <p class="text-xs text-justify">Launched in 2017, the challenge is simple: complete 30 minutes of activity each day for 30 days. Dubai Fitness Challenge helps create a fitness-focused mindset and inspires us all to seek healthy, active lifestyles. With a month-long calendar of free workouts, exciting fitness events and wellness-centric entertainment, there’s always plenty of inspiration to keep moving.</p> -->
                 </div>
                 <div class="links">
