--- a/hq-admin.html
+++ b/hq-admin.html
@@ -18,7 +18,7 @@
             <div class="header-container">
                 <div class="logo-box">
                     <a href="./index.html" class="brand">
-                        <img src="./images/logo.png" alt="" class="brand-img" width="93px">
+                        <img src="./images/logo.png" alt="" class="brand-img" width="92">
                     </a>
                 </div>
                 <nav class="navbar">
@@ -167,7 +167,7 @@
         <footer id="footer">
             <div class="container">
                 <div class="info">
-                    <img src="./images/footer-logo.png" alt="" width="162px">
+                    <img src="./images/footer-logo.png" alt="" width="162">
                     <!-- <p class="text-xs text-justify">Launched in 2017, the challenge is simple: complete 30 minutes of activity each day for 30 days. Dubai Fitness Challenge helps create a fitness-focused mindset and inspires us all to seek healthy, active lifestyles. With a month-long calendar of free workouts, exciting fitness events and wellness-centric entertainment, there’s always plenty of inspiration to keep moving.</p> -->
                 </div>
                 <div class="links">
