--- a/frontend-user-guides-post-detail.html
+++ b/frontend-user-guides-post-detail.html
@@ -176,6 +176,7 @@
                             <p class="section-title">Accessing your QR code</p>
                             <p class="subsection-desc">Once you are logged in you can find your QR code in the top menu of your browser.</p>
                             <p class="subsection-desc">Simply click on the QR code icon and your code will pop up, you will need to use this to check in to activities at Kite Beach Fitness Village and Mushrif Park Fitness Village.</p>
+                            <img src="./images/post-detail/Accessing-your-QR-code.gif" width="677" class="section-img" alt="">
                             <div id="sub-section4" class="sub-section">
                                 <p class="subsection-title">Updating your profile</p>
                                 <p class="subsection-desc">To update your profile information click on the ‘User Icon’ in the top menu of your browser. Then select ‘View Profile’.</p>
