edit footer section

--- a/post-detail.html
+++ b/post-detail.html
@@ -284,6 +284,9 @@
                             <a href="#">Activity Listings</a>
                         </li>
                         <li class="">
+                            <a href="./index.html">Frontend User Guides</a>
+                        </li>
+                        <li class="">
                             <a href="./facility-admin.html">Facility Admin User Guide</a>
                         </li>
                     </ul>
