--- a/frontend-user-guides-post-detail.html
+++ b/frontend-user-guides-post-detail.html
@@ -327,6 +327,9 @@
                             <a href="#">Activity Listings</a>
                         </li>
                         <li class="">
+                            <a href="./index.html">Frontend User Guides</a>
+                        </li>
+                        <li class="">
                             <a href="./facility-admin.html">Facility Admin User Guide</a>
                         </li>
                     </ul>
