add the content of "Backend Facility Guides

--- a/frontend-user-guides-post-detail.html
+++ b/frontend-user-guides-post-detail.html
@@ -182,10 +182,12 @@
                                 <p class="subsection-desc">To update your profile information click on the ‘User Icon’ in the top menu of your browser. Then select ‘View Profile’.</p>
                                 <p class="subsection-desc">Here you can input/change data in your profile and also enter your Emergency Contact details.</p>
                                 <p class="subsection-desc">Remember to click the ‘Update Profile’ button when you’ve finished.</p>
+                                <img src="./images/post-detail/Updating-your-profile.gif" width="677" class="section-img" alt="">
                             </div>
                             <div id="sub-section5" class="sub-section">
                                 <p class="subsection-title">Covid Declaration</p>
                                 <p class="subsection-desc">To participate in DFC activities you will have to declare that you have received both doses of an approved COVID-19 vaccine and are willing to provide proof of my vaccination on check-in at my booked class, activity or event.</p>
+                                <img src="./images/post-detail/Covid-Declaration.gif" width="677" class="section-img" alt="">
                             </div>
                         </div>
                         <div id="section3">
@@ -257,10 +259,10 @@
                         </div>
                         <div id="section4">
                             <p class="section-title">Booking a class</p>
-                            <p class="subsection-desc">To book a class you must be logged into your DFC account, if you don't have an account click here to find out how to create one.</p>
+                            <p class="subsection-desc">To book a class you must be logged into your DFC account, if you don't have an account <a href="#">click here</a> to find out how to create one.</p>
                             <p class="subsection-desc">Once you are logged in simply click ‘Book now’ under any class. Select ‘Single slot booking’ and click confirm.</p>
                             <p class="subsection-desc">You will then see a confirmation notification and receive a booking confirmation in your email.</p>
-                            <p class="subsection-desc">Your booking will also appear in your calendar, click here to see our calendar guide.</p>
+                            <p class="subsection-desc">Your booking will also appear in your calendar, <a href="#">click here</a> to see our calendar guide.</p>
                         </div>
                         <div id="section5">
                             <p class="section-title">View your Booking Calendar</p>
