--- a/post-detail.html
+++ b/post-detail.html
@@ -167,10 +167,7 @@
                                                 <a href="#sub-section19" class="aside-subnav-link">Creating an Activity</a>
                                             </li>
                                             <li class="aside-subnav-item">
-                                                <a href="#sub-section20" class="aside-subnav-link">Creating a Day Pass</a>
-                                            </li>
-                                            <li class="aside-subnav-item">
-                                                <a href="#sub-section21" class="aside-subnav-link">Instructions File</a>
+                                                <a href="#sub-section20" class="aside-subnav-link">Instructions File</a>
                                             </li>
                                         </ul>
                                     </li>
@@ -212,7 +209,18 @@
                             <p class="section-title">Reporting</p>
                             <div id="sub-section4" class="sub-section">
                                 <p class="subsection-title">Attendance reporting</p>
-                                <!-- <p class="subsection-desc">You can reach the Backend Login Panel by clicking here - DFC Backend. Please use the login credentials given to you by the DFC Outreach team.</p> -->
+                                <p class="subsection-desc">The booking attendance report provides information about all the users that have booked your classes such as which class they have booked and on what date.</p>
+                                <p class="subsection-desc">The following information can be found here</p>
+                                <ol class="subsection-desc-list">
+                                    <li class="subsection-desc-item">Client Name</li>
+                                    <li class="subsection-desc-item">Facility Name</li>
+                                    <li class="subsection-desc-item">Zone Name</li>
+                                    <li class="subsection-desc-item">Activity Name</li>
+                                    <li class="subsection-desc-item">Activity Date</li>
+                                    <li class="subsection-desc-item">Activity Time</li>
+                                    <li class="subsection-desc-item">Booking Status</li>
+                                </ol>
+                                <p class="subsection-desc">For a more detailed view you can download the attendance report as a .csv and other file types.</p>
                             </div>
                         </div>
                         <div id="section3">
@@ -345,9 +353,6 @@
                                 <p class="subsection-desc">You can then enter the activity name and description and click ‘Save’.</p>
                             </div>
                             <div id="sub-section20" class="sub-section">
-                                <p class="subsection-title">Creating a Day Pass</p>
-                            </div>
-                            <div id="sub-section21" class="sub-section">
                                 <p class="subsection-title">Instructions File</p>
                                 <p class="subsection-desc">Instructions files are PDF’s that are attached to the users booking confirmation email. These can contain extra information about the activity such as what to bring and where to park. Instruction files are optional but recommended.</p>
                                 <p class="subsection-desc">Please upload your Instruction file in PDF Format with a file size no larger than 500kb.</p>
