--- a/facility-admin.html
+++ b/facility-admin.html
@@ -103,7 +103,7 @@
                                     <p class="card-desc">Want to get started with creating an activity, but don’t know where to begin? </p>
                                 </div>
                             </a>
-                            <a href="./post-detail.html" class="card">
+                            <a href="./post-detail.html#section1" class="card">
                                 <div class="card-header">
                                     <img src="./images/card-img-02.png" class="card-img" alt="">
                                 </div>
@@ -112,7 +112,7 @@
                                     <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
                                 </div>
                             </a>
-                            <a href="./post-detail.html" class="card">
+                            <a href="./post-detail.html#section3" class="card">
                                 <div class="card-header">
                                     <img src="./images/card-img-02.png" class="card-img" alt="">
                                 </div>
@@ -130,7 +130,7 @@
                                     <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
                                 </div>
                             </a>
-                            <a href="./post-detail.html" class="card">
+                            <a href="./post-detail.html#section6" class="card">
                                 <div class="card-header">
                                     <img src="./images/card-img-02.png" class="card-img" alt="">
                                 </div>
