--- a/facility-admin.html
+++ b/facility-admin.html
@@ -96,7 +96,7 @@
                         <div class="card-box">
                             <a href="./post-detail.html" class="card">
                                 <div class="card-header">
-                                    <img src="./images/card-img-01.png" class="card-img" alt="">
+                                    <img src="./images/facility-admin/card-img-01.png" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
                                     <p class="card-title">Getting Started with Backend Facility Guides</p>
@@ -105,7 +105,7 @@
                             </a>
                             <a href="./post-detail.html#section1" class="card">
                                 <div class="card-header">
-                                    <img src="./images/card-img-02.png" class="card-img" alt="">
+                                    <img src="./images/facility-admin/card-img-02.jpg" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
                                     <p class="card-title">General Admin</p>
@@ -114,7 +114,7 @@
                             </a>
                             <a href="./post-detail.html#section3" class="card">
                                 <div class="card-header">
-                                    <img src="./images/card-img-02.png" class="card-img" alt="">
+                                    <img src="./images/facility-admin/card-img-03.jpg" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
                                     <p class="card-title">Updating Your Facility Profile</p>
@@ -123,7 +123,7 @@
                             </a>
                             <a href="./post-detail.html" class="card">
                                 <div class="card-header">
-                                    <img src="./images/card-img-02.png" class="card-img" alt="">
+                                    <img src="./images/facility-admin/card-img-04.jpg" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
                                     <p class="card-title">Check In App Guides</p>
@@ -132,7 +132,7 @@
                             </a>
                             <a href="./post-detail.html#section6" class="card">
                                 <div class="card-header">
-                                    <img src="./images/card-img-02.png" class="card-img" alt="">
+                                    <img src="./images/facility-admin/card-img-05.jpg" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
                                     <p class="card-title">Scheduling Classes</p>
