--- a/facility-admin.html
+++ b/facility-admin.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="shortcut icon" href="./images/fav.png" type="image/x-icon">
-    <title>Genral Admin Guide | Dubai Fitness Challenge</title>
+    <title>Facility Admin User Guide | Dubai Fitness Challenge</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./css/main.css">
@@ -85,7 +85,7 @@
             </section>
 
             <!-- Genral Admin Topics -->
-            <section id="genral-admin-topics">
+            <section id="facility-admin-topics">
                 <div class="container">
                     <div class="section-header">
                         <p class="section-title">Genral Admin Topics</p>
