--- a/facility-admin.html
+++ b/facility-admin.html
@@ -94,49 +94,49 @@
                     </div>
                     <div class="section-body">
                         <div class="card-box">
-                            <a href="./post-detail.html" class="card">
+                            <a href="./post-detail.html#section1" class="card">
                                 <div class="card-header">
                                     <img src="./images/facility-admin/card-img-01.png" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-title">Getting Started with Backend Facility Guides</p>
-                                    <p class="card-desc">Want to get started with creating an activity, but don’t know where to begin? </p>
-                                </div>
-                            </a>
-                            <a href="./post-detail.html#section1" class="card">
-                                <div class="card-header">
-                                    <img src="./images/facility-admin/card-img-02.jpg" class="card-img" alt="">
-                                </div>
-                                <div class="card-body">
-                                    <p class="card-title">General Admin</p>
-                                    <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
+                                    <p class="card-title">Getting Started - General Admin</p>
+                                    <p class="card-desc">We’ll cover how to login, recover a lost password and provide an overview of everything you can do to manage your account.</p>
                                 </div>
                             </a>
                             <a href="./post-detail.html#section3" class="card">
                                 <div class="card-header">
-                                    <img src="./images/facility-admin/card-img-03.jpg" class="card-img" alt="">
+                                    <img src="./images/facility-admin/card-img-02.jpg" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-title">Updating Your Facility Profile</p>
-                                    <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
-                                </div>
-                            </a>
-                            <a href="./post-detail.html" class="card">
-                                <div class="card-header">
-                                    <img src="./images/facility-admin/card-img-04.jpg" class="card-img" alt="">
-                                </div>
-                                <div class="card-body">
-                                    <p class="card-title">Check In App Guides</p>
-                                    <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
+                                    <p class="card-title">Updating your business profile</p>
+                                    <p class="card-desc">Learn how to update your business information on our platform, upload a new logo, banner image or business description</p>
                                 </div>
                             </a>
                             <a href="./post-detail.html#section6" class="card">
                                 <div class="card-header">
+                                    <img src="./images/facility-admin/card-img-03.jpg" class="card-img" alt="">
+                                </div>
+                                <div class="card-body">
+                                    <p class="card-title">Scheduling</p>
+                                    <p class="card-desc">Learn everything you need to know about creating a class and uploading it to our frontend so users can book your classes.</p>
+                                </div>
+                            </a>
+                            <a href="./post-detail.html#section4" class="card">
+                                <div class="card-header">
+                                    <img src="./images/facility-admin/card-img-04.jpg" class="card-img" alt="">
+                                </div>
+                                <div class="card-body">
+                                    <p class="card-title">Managing Bookings</p>
+                                    <p class="card-desc">This section will guide you on how to check users in, cancel and edit classes and add specific instructors to your classes.</p>
+                                </div>
+                            </a>
+                            <a href="./post-detail.html#section2" class="card">
+                                <div class="card-header">
                                     <img src="./images/facility-admin/card-img-05.jpg" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-title">Scheduling Classes</p>
-                                    <p class="card-desc">Want to get started with Booking an activity, but don’t know where to begin? This section will guide through the process of booking an activity for yourself and for others.</p>
+                                    <p class="card-title">Attendance reporting</p>
+                                    <p class="card-desc">Find all the information about users who have booked your classes, and whether they checked in, cancelled or didn’t show up.</p>
                                 </div>
                             </a>
                         </div>
