--- a/facility-admin.html
+++ b/facility-admin.html
@@ -88,8 +88,8 @@
             <section id="facility-admin-topics">
                 <div class="container">
                     <div class="section-header">
-                        <p class="section-title">Genral Admin Topics</p>
-                        <p class="section-desc">We got you covered with all your problems.</p>
+                        <p class="section-title">Browse Topics</p>
+                        <p class="section-desc">Find the answers to all your questions.</p>
                         <p class="section-desc">Please navigate through the below links to get your answers.</p>
                     </div>
                     <div class="section-body">
@@ -137,6 +137,15 @@
                                 <div class="card-body">
                                     <p class="card-title">Attendance reporting</p>
                                     <p class="card-desc">Find all the information about users who have booked your classes, and whether they checked in, cancelled or didn’t show up.</p>
+                                </div>
+                            </a>
+                            <a href="./post-detail.html#sub-section20" class="card">
+                                <div class="card-header">
+                                    <img src="./images/facility-admin/card-img-06.jpg" class="card-img" alt="">
+                                </div>
+                                <div class="card-body">
+                                    <p class="card-title">Instructions File</p>
+                                    <p class="card-desc">Learn how to attach a PDF to your booking confirmation email, here you can include extra information about the class such as where people can park and what they might need to bring.</p>
                                 </div>
                             </a>
                         </div>
