--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             </a>
                             <a href="./frontend-user-guides-post-detail.html#section3" class="card">
                                 <div class="card-header">
-                                    <img src="./images/card-img-03.png" class="card-img" alt="">
+                                    <img src="./images/user-manual-topics/card-img-02.jpg" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
                                     <p class="card-title">Finding a class or activity</p>
@@ -114,7 +114,7 @@
                             </a>
                             <a href="./frontend-user-guides-post-detail.html#section4" class="card">
                                 <div class="card-header">
-                                    <img src="./images/card-img-03.png" class="card-img" alt="">
+                                    <img src="./images/user-manual-topics/card-img-03.jpg" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
                                     <p class="card-title">Booking a class</p>
@@ -123,7 +123,7 @@
                             </a>
                             <a href="./frontend-user-guides-post-detail.html#section5" class="card">
                                 <div class="card-header">
-                                    <img src="./images/card-img-03.png" class="card-img" alt="">
+                                    <img src="./images/user-manual-topics/card-img-04.jpg" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
                                     <p class="card-title">View your booking Calender</p>
@@ -132,7 +132,7 @@
                             </a>
                             <a href="./frontend-user-guides-post-detail.html#section6" class="card">
                                 <div class="card-header">
-                                    <img src="./images/card-img-03.png" class="card-img" alt="">
+                                    <img src="./images/user-manual-topics/card-img-05.jpg" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
                                     <p class="card-title">Cancelling a booking</p>
@@ -141,7 +141,7 @@
                             </a>
                             <a href="./frontend-user-guides-post-detail.html#section7" class="card">
                                 <div class="card-header">
-                                    <img src="./images/card-img-03.png" class="card-img" alt="">
+                                    <img src="./images/user-manual-topics/card-img-06.jpg" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
                                     <p class="card-title">Booking a class for a friend</p>
@@ -150,7 +150,7 @@
                             </a>
                             <a href="./frontend-user-guides-post-detail.html#section8" class="card">
                                 <div class="card-header">
-                                    <img src="./images/card-img-03.png" class="card-img" alt="">
+                                    <img src="./images/user-manual-topics/card-img-07.jpg" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
                                     <p class="card-title">Booking a class for friends/family</p>
